# battleship-tauri

./: .gitignore  README.md  package-lock.json  package.json  scanner-x86_64-pc-windows-msvc.spec  tailwind.config.cjs  test-x86_64-pc-windows-msvc.spec
py/: scanner.py
src/: App.svelte  app.postcss
src-python/: build-merger.py  pyproject.toml  scanner-x86_64-pc-windows-msvc.exe.spec  test-x86_64-pc-windows-msvc.exe.spec
src-python/src/: scanner.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/scanner/: scanner.py
src-tauri/src/: battleship.rs  joystick.rs  main.rs  point.rs  python_manager.rs  serialport.rs  serialport_manager.rs  vector2.rs
src/lib/: CircleSector.svelte  Cursor.svelte  PickPort.svelte  RadarAnimation.svelte
src_arduino/Battleship/: Battleship.cpp  Battleship.h
src_arduino/BattleshipClient/: BattleshipClient.ino
src_arduino/BattleshipServer/: BattleshipServer.ino
