[tool.poetry]
name = "src-python"
version = "0.1.0"
description = ""
authors = ["Vuferen <vuferen@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
opencv-python = "^4.6.0"
numpy = "^1.23.4"
pyinstaller = "^5.6.2"
# pywin32 = "^303"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
