[package]
name = "battleship-tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["api-all", "process-command-api"] }
serialport = "4.0.1"
rand = "0.8.5"
# pyo3 = { version = "0.17.3", features = ["auto-initialize", "extension-module"] }
# wasmer_runtime = "0.17.1"


# cpython = "0.7.1"
# json = "0.12.4"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

# [dependencies.pyo3]
# version = "0.17.3"
# features = ["auto-initialize"]
